--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                 <div class="char charBody"></div>
             </div>
         </section>
+
+        <div id="wheel">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <script src="main.js"></script>
     </body>
 </html>
