--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 
             <div id="wheel">
-                <div><img src="/media/icon.svg"></div>
-                <div><img src="/media/icon.svg"></div>
-                <div><img src="/media/icon.svg"></div>
-                <div><img src="/media/icon.svg"></div>
-                <div><img src="/media/icon.svg"></div>
+                <div><img src="media/icon.svg"></div>
+                <div><img src="media/icon.svg"></div>
+                <div><img src="media/icon.svg"></div>
+                <div><img src="media/icon.svg"></div>
+                <div><img src="media/icon.svg"></div>
             </div>
         </section>
         <script src="main.js"></script>
